--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <!-- Stats Bar (Sticky) -->
+        <!-- STICKY HEADER: Stats always visible -->
         <div class="sticky-header game-header">
             <div>
                 <h1 style="font-family:'IBM Plex Mono',monospace;font-size:2.1rem">
@@ -22,7 +22,7 @@
             </div>
             <div class="game-stats">
                 <div class="status-indicator"><i class="fas fa-layer-group"></i>
-                    <span>Level: <strong id="current-level">1</strong>/4</span>
+                    <span>Level: <strong id="current-level">1</strong>/<span id="level-total">4</span></span>
                 </div>
                 <div class="status-indicator"><i class="fas fa-star"></i>
                     <span>Score: <strong id="score-value">0</strong></span>
@@ -31,6 +31,10 @@
                     <span>Lives: <strong id="lives-value">3</strong></span>
                 </div>
             </div>
+        </div>
+        <!-- FLOATING TIMER CARD (shown only in timed mode) -->
+        <div id="floating-timer" class="floating-timer" style="display:none;">
+            <i class="fas fa-stopwatch"></i> <span id="timer-value">15</span>s
         </div>
 
         <!-- Settings Card -->
@@ -59,16 +63,14 @@
                     <div class="settings-card" data-value="timed" tabindex="0">
                         <i class="fas fa-stopwatch"></i> Timed
                     </div>
-                    <div class="settings-card" data-value="zen" tabindex="0">
-                        <i class="fas fa-spa"></i> Zen
-                    </div>
                 </div>
             </div>
+            <div class="settings-row" id="start-row">
+                <button id="start-game" class="btn btn-primary" style="margin-top:.8em;"><i class="fas fa-play"></i> Start Game</button>
+            </div>
         </div>
-
         <!-- Dynamic Game Area -->
         <div id="game-area"></div>
-
         <!-- Footer -->
         <footer style="text-align:center;margin:38px 0 8px 0;font-size:0.92rem;color:#a5a5ae;font-family:'IBM Plex Mono',monospace;">
             <span>Made with <i class="fas fa-brain"></i> by bertings1 &copy; 2025</span>
