--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -8,21 +8,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-  <!-- NAV -->
+  <!-- TOP NAV -->
   <header class="topbar">
     <div class="topbar-left">
-      <button id="hamburger" class="hamburger"><i class="fas fa-bars"></i></button>
-      <div class="logo">
-        <i class="fas fa-brain"></i>
-        <span class="brand">Logic Runner</span>
-      </div>
+      <button id="hamburger" class="hamburger" aria-label="Open menu"><i class="fas fa-bars"></i></button>
+      <div class="logo"><i class="fas fa-brain"></i><span class="brand">Logic Runner</span></div>
     </div>
 
     <nav class="topnav" id="topnav">
-      <a href="#" data-target="home" class="nav-link active">Play</a>
-      <a href="#" data-target="tutorial" class="nav-link">Tutorial</a>
-      <a href="#" data-target="about" class="nav-link">About</a>
-      <a href="#" data-target="leaderboard" class="nav-link">Leaderboard</a>
+      <button class="nav-link active" data-target="home">Play</button>
+      <button class="nav-link" data-target="tutorial-panel">Tutorial</button>
+      <button class="nav-link" data-target="about-panel">About</button>
+      <button class="nav-link" data-target="leaderboard-panel">Leaderboard</button>
     </nav>
 
     <div class="topbar-right">
@@ -32,16 +29,18 @@
   </header>
 
   <main class="container">
-    <!-- Sticky branding header (keeps structure on desktop) -->
+    <!-- HOME / PLAY -->
     <section id="home" class="panel active-panel">
       <div class="hero">
         <div class="hero-left">
           <h1>Logic Runner</h1>
           <p class="subtitle">Test your wits and master propositional logic through gameplay.</p>
+
           <div class="hero-cta">
             <button id="quick-start" class="btn btn-primary"><i class="fas fa-play"></i> Quick Start</button>
-            <button id="open-tutorial" class="btn btn-secondary"><i class="fas fa-book"></i> Tutorial</button>
+            <button id="quick-tutorial" class="btn btn-secondary"><i class="fas fa-book"></i> Tutorial</button>
           </div>
+
           <div class="meta-row">
             <span class="meta-pill">Modern</span>
             <span class="meta-pill">Minimal</span>
@@ -50,70 +49,72 @@
         </div>
 
         <aside class="hero-right">
-          <!-- Settings card (keeps behaviour from before) -->
+          <!-- Settings Card -->
           <div class="card" id="settings-card">
             <div class="card-title"><i class="fas fa-sliders-h"></i> GAME SETTINGS</div>
+
             <div class="settings-row">
               <div class="settings-label">DIFFICULTY</div>
               <div class="settings-choices" id="difficulty-select">
-                <div class="settings-card active" data-value="easy" tabindex="0"><i class="fas fa-seedling"></i> Beginner</div>
-                <div class="settings-card" data-value="medium" tabindex="0"><i class="fas fa-chart-line"></i> Intermediate</div>
-                <div class="settings-card" data-value="hard" tabindex="0"><i class="fas fa-crown"></i> Expert</div>
+                <div class="settings-card active" data-value="easy">Beginner</div>
+                <div class="settings-card" data-value="medium">Intermediate</div>
+                <div class="settings-card" data-value="hard">Expert</div>
               </div>
             </div>
+
             <div class="settings-row">
               <div class="settings-label">MODE</div>
               <div class="settings-choices" id="mode-select">
-                <div class="settings-card active" data-value="classic" tabindex="0"><i class="fas fa-puzzle-piece"></i> Classic</div>
-                <div class="settings-card" data-value="timed" tabindex="0"><i class="fas fa-stopwatch"></i> Timed</div>
+                <div class="settings-card active" data-value="classic">Classic</div>
+                <div class="settings-card" data-value="timed">Timed</div>
               </div>
             </div>
 
             <div style="margin-top:12px;">
-              <button id="start-game" class="btn btn-primary" title="Start Game"><i class="fas fa-play"></i> Start Game</button>
+              <button id="start-game" class="btn btn-primary">Start Game</button>
             </div>
           </div>
 
           <div class="card small-card" id="help-card">
             <div class="card-title"><i class="fas fa-info-circle"></i> Quick Tips</div>
             <ol class="tips">
-              <li>Drag operator names to symbols (or answer prompts).</li>
-              <li>Timed mode starts when you press Start.</li>
+              <li>Drag operator names to symbols, or answer prompts when shown.</li>
+              <li>Timed mode starts when you press Start. Timer floats top-right.</li>
               <li>Use Retry / Quit from the floating controls while playing.</li>
             </ol>
           </div>
         </aside>
       </div>
 
-      <!-- Main play area (populated by game.js) -->
+      <!-- Dynamic game area (populated by JS) -->
       <section id="game-area" class="game-area"></section>
     </section>
 
-    <!-- Tutorial Panel -->
-    <section id="tutorial" class="panel">
+    <!-- TUTORIAL PANEL (scroll-target) -->
+    <section id="tutorial-panel" class="panel">
       <div class="card">
         <div class="card-title"><i class="fas fa-book"></i> Tutorial</div>
         <h3>How to Play</h3>
         <ol class="tutorial-list">
-          <li>Choose a difficulty & mode then press Start.</li>
-          <li>Each question is unique; questions are randomized and won't repeat across difficulties.</li>
-          <li>In Timed mode the floating timer starts only when you press Start.</li>
-          <li>Use Retry to restart the current run or Quit to return to settings.</li>
+          <li>Choose difficulty and mode, then press Start.</li>
+          <li>Questions are randomized and unique per difficulty (no repeats across difficulties).</li>
+          <li>In Timed mode the floating timer starts when the first question appears.</li>
+          <li>Use the floating Retry or Quit buttons during a run.</li>
         </ol>
         <h4>Examples</h4>
-        <p><strong>Sentence Builder</strong>: "A ___ B (true if both are true)" — drag "AND".</p>
+        <p><strong>Sentence Builder</strong>: "A ___ B (true if both are true)" — drop "AND".</p>
         <p><strong>Truth Table</strong>: Fill T/F for input pairs.</p>
       </div>
     </section>
 
-    <!-- About Panel -->
-    <section id="about" class="panel">
+    <!-- ABOUT -->
+    <section id="about-panel" class="panel">
       <div class="card about-card">
         <div class="card-title"><i class="fas fa-users"></i> About</div>
-        <p>We are <strong>Group 3 Block 2N, BSIT</strong>.</p>
+        <p>We are Group 3 Block 2N in BSIT.</p>
         <p>Project Team:</p>
         <ul>
-          <li><strong>CJ R. Tabada</strong> (Team Lead)</li>
+          <li>CJ R. Tabada</li>
           <li>Adrian Kith Lagmay</li>
           <li>Rafael Bangoy Caralipio</li>
           <li>Cymon Austria</li>
@@ -122,31 +123,34 @@
       </div>
     </section>
 
-    <!-- Leaderboard Panel -->
-    <section id="leaderboard" class="panel">
+    <!-- LEADERBOARD -->
+    <section id="leaderboard-panel" class="panel">
       <div class="card">
-        <div class="card-title"><i class="fas fa-trophy"></i> Leaderboard</div>
-        <p>Top scores (local):</p>
-        <ol id="leader-list"></ol>
-        <div style="margin-top:10px;">
+        <div class="card-title"><i class="fas fa-trophy"></i> Leaderboard (local)</div>
+        <div style="display:flex;gap:.5rem;align-items:center;margin-bottom:8px;">
+          <input id="player-name" placeholder="Your name" class="name-input" />
           <button id="clear-leader" class="btn btn-secondary">Clear</button>
         </div>
+        <ol id="leader-list"></ol>
       </div>
     </section>
   </main>
 
-  <!-- Floating game UI (level/score/lives/timer + Quit/Retry) -->
-  <div id="floating-ui" class="floating-ui" style="display:none;">
-    <div class="floating-stats">
-      <div class="status-indicator"><i class="fas fa-layer-group"></i> <span id="stat-level">1/4</span></div>
+  <!-- Floating UI: level, score, lives, timer + Quit/Retry -->
+  <div id="floating-ui" class="floating-ui" aria-hidden="true">
+    <div class="floating-top">
+      <div class="status-indicator"><i class="fas fa-layer-group"></i> <span id="stat-level">1/1</span></div>
       <div class="status-indicator"><i class="fas fa-star"></i> <span id="stat-score">0</span></div>
       <div class="status-indicator"><i class="fas fa-heart"></i> <span id="stat-lives">3</span></div>
-    </div>
-    <div class="floating-stats" style="margin-top:8px;">
       <div id="floating-timer" class="status-indicator" style="display:none;"><i class="fas fa-stopwatch"></i> <span id="timer-value">15</span>s</div>
-      <div class="floating-actions"><button id="btn-retry" class="btn floating-btn"><i class="fas fa-redo"></i></button><button id="btn-quit" class="btn floating-btn"><i class="fas fa-sign-out-alt"></i></button></div>
+    </div>
+    <div class="floating-actions">
+      <button id="btn-retry" class="btn floating-btn" title="Retry"><i class="fas fa-redo"></i></button>
+      <button id="btn-quit" class="btn floating-btn" title="Quit"><i class="fas fa-sign-out-alt"></i></button>
     </div>
   </div>
+
+  <!-- Modals appended by JS: tutorial modal, game-over modal, name-submit modal -->
 
   <script src="game.js"></script>
 </body>
